--- a/charts/cinema/charts/website/templates/service.yaml
+++ b/charts/cinema/charts/website/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "website.labels" . | nindent 4 }}
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
