--- a/charts/cinema/charts/website/templates/service.yaml
+++ b/charts/cinema/charts/website/templates/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "website.fullname" . }}
-  labels:
-    {{- include "website.labels" . | nindent 4 }}
+  labels: 
+    {{ include "website.labels" . | nindent 4 }}
 spec:
   type: LoadBalancer
   ports:
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "website.selectorLabels" . | nindent 4 }}
+    {{ include "website.selectorLabels" . | nindent 4 }}
